# arpakitlib

./: .gitignore  AUTHOR.md  HELP.md  KNOWLEDGE.md  README.md  pyproject.toml
arpakitlib/: _ar_arpakitlib_cli.py  api_key_util.py  ar_additional_model_util.py  ar_aiogram_as_tg_command_2_util.py  ar_aiogram_as_tg_command_util.py  ar_aiogram_util.py  ar_arpakit_lib_module_util.py  ar_arpakit_project_template_util.py  ar_arpakit_schedule_uust_api_client_util.py  ar_arpakit_schedule_uust_site_util.py  ar_arpakitlib_cli_util.py  ar_base64_util.py  ar_base_http_api_client_util.py  ar_base_worker_util.py  ar_blank_util.py  ar_cache_file_util.py  ar_class_util.py  ar_clone_pydantic_model_fields_util.py  ar_datetime_util.py  ar_dict_as_object.py  ar_dict_util.py  ar_encrypt_decrypt_util.py  ar_enumeration_util.py  ar_exception_util.py  ar_fastapi_util.py  ar_file_storage_in_dir_util.py  ar_file_util.py  ar_generate_celery_url.py  ar_generate_simple_code_util.py  ar_hash_util.py  ar_http_request_util.py  ar_include_aiogram_routers_from_dir_util.py  ar_ip_util.py  ar_json_db_util.py  ar_json_util.py  ar_jwt_util.py  ar_list_of_dicts_to_xlsx.py  ar_list_util.py  ar_logging_util.py  ar_make_zip_with_passwd.py  (+26 more)
command/: git_set_arpakit_company_origin.sh  git_set_arpakit_origin.sh  git_set_divarteam_origin.sh  poetry_build.sh  poetry_publish_testpypi.sh  poetry_publish_testpypi_and_pypi.sh  twine_upload_test_pypi.sh  update_on_every_remote_resources.sh  (+1 more)
example/: example.py  first.py  (+1 more)
test_project/: README.md  pyproject.toml
test_project/manage/: git_set_arpakit_company_origin.sh
(+434 files in other folders)
