[tool.poetry]
name = "testing"
version = "0.1.0"
description = "testing"
authors = ["arpakit <arpakit@gmail.com>", "arpakit_support <support@arpakit.com>"]
license = "Apache License 2.0"
readme = "README.md"
keywords = ["testing", "arpakit", "arpakit-company", "arpakitcompany", "arpakit_company"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
